--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,12 @@
     </dependency>
   </dependencies>
 
+
+  <repositories>
+    <repository>
+      <id>central</id>
+      <name>Maven Central Repository</name>
+      <url>https://repo1.maven.org/maven2/</url>
+    </repository>
+  </repositories>
 </project>
